--- a/src/main/resources/del-bootstrap.yml
+++ b/src/main/resources/del-bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
     application:
-        name : springbootService
+        name : JavaBasicStudy
     cloud:
         config:
             uri : http://localhost:6002/
