--- a/pom.xml
+++ b/pom.xml
@@ -54,24 +54,24 @@
             <artifactId>jackson-module-jaxb-annotations</artifactId>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>1.4.0.RELEASE</version>
-        </dependency>
+        </dependency>-->
 
         <!--Spring Cloud Config 客户端依赖-->
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
             <version>1.4.0.RELEASE</version>
-        </dependency>
+        </dependency>-->
 
         <!--Spring Boot Actuator，感应服务端变化-->
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
