--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,42 @@ spring:
     username: guest
     password: guest
 
+  redis:
+    database: 0
+    host: localhost
+    port: 6378
+
 
 #eureka.client.service-url.defaultZone=http://localhost:5000/eureka/
+
+#Mysql 1
+#mysql:
+#  datasource:
+#    test1:
+#      url: jdbc:mysql://localhost:3306/test01?useUnicode=true&characterEncoding=utf-8
+#      username: root
+#      password: admin
+#
+#      minPoolSize: 3
+#      maxPoolSize: 25
+#      maxLifetime: 20000
+#      borrowConnectionTimeout: 30
+#      loginTimeout: 30
+#      maintenanceIntercal: 60
+#      maxIdleTime: 60
+#      testQuery: select 1
+#
+#    test2:
+#      url: jdbc:mysql://localhost:3306/test02?useUnicode=true&characterEncoding=utf-8
+#      username: root
+#      password: admin
+#
+#      minPoolSize: 3
+#      maxPoolSize: 25
+#      maxLifetime: 20000
+#      borrowConnectionTimeout: 30
+#      loginTimeout: 30
+#      maintenanceIntercal: 60
+#      maxIdleTime: 60
+#      testQuery: select 1
+
